<resources>
    <string name="app_name">Photos</string>
    <string name="common_add">+</string>
    <string name="common_0">0</string>
    <string name="albumoverview_contentdescription">Image</string>
    <string name="albumoverview_placeholder">Placeholder Text</string>
    <string name="photooverview_contentdescription">Image</string>
    <string name="albumviewer_addfromgallery">Add From Gallery</string>
    <string name="albumviewer_addfromfile">Add From File</string>
    <string name="albumviewer_addfromurl">Add From URL</string>
    <string name="albumviewer_nulluri">Photo Selection Cancelled</string>
    <string name="common_rename">Rename</string>
    <string name="common_delete">Delete</string>
    <string name="common_back"><![CDATA[<]]></string>
    <string name="common_menu">⋮</string>
    <string name="imageviewr_modifylocationtag">Modify Location Tag</string>
    <string name="imageviewr_deleteLocationTag">Remove Location Tag</string>
    <string name="imageviewr_addpersontag">Add to Person Tag</string>
    <string name="imageviewr_deletepersontag">Remove from Person Tag</string>
    <string name="imageviewer_detailstoggle">Show/Hide Details</string>
    <string name="albumoverview_searchbutton">Search Button</string>
    <string name="albumviewer_move">Move to Album</string>
    <string name="tagsearch_and">AND</string>
    <string name="tagsearch_or">OR</string>
    <string name="tagsearch_enterperson">Enter a person</string>
    <string name="tagsearch_enterlocation">Enter a location</string>
</resources>