<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:elevation="16dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_album_thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="150dp"
            android:maxHeight="150dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/no_image_icon"
            android:contentDescription="@string/albumoverview_contentdescription" />

        <TextView
            android:id="@+id/tv_album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/albumoverview_placeholder" />

        <TextView
            android:id="@+id/tv_album_photocount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/common_0" />
    </LinearLayout>
</androidx.cardview.widget.CardView>